Fix token position in token fields overflowing

--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ table td {
   white-space: nowrap;
 }
 
-.twitter-typeahead,
+.form-group > .twitter-typeahead,
 .bootstrap-tagsinput {
   display: block !important;
 }
